more effective casts: primitive to objects